# Let-Engine-old

./: Cargo.toml  README.md  build  dd.md  debug  notes.md
.obsidian/: workspace.json
src/: client.rs  consts.rs  data.rs  frag.glsl  game.rs  main.rs  notes  objects.rs  resources.rs  server.rs  triangle.rs  vert.glsl  vulkan.rs
src/game/: client.rs  discord.rs  player.rs  sound.rs
src/shaders/: frag.glsl  obj.fs  obj.vs  vert.glsl
src/vulkan/: convert.rs  draw.rs  instance.rs  pipeline.rs  shaders.rs  swapchain.rs
