
[package]
name = "vulkantest"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.31.1"
vulkano-win = "0.31.0"
vulkano-util = "0.31.0"
vulkano-shaders = "0.31.1"
bytemuck = "1.8.0"
winit = "0.27.3"
sdl2 = "0.35.2"
vk-sys = "0.7.0"
image = "0.24.4"
rand = "0.8.5"
