
[package]
name = "let_engine"
version = "0.0.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32.1"
vulkano-win = "0.32.0"
vulkano-shaders = "0.31.1"
bytemuck = "1.8.0"
winit = "0.27.5"
vk-sys = "0.7.0"
image = "0.24.4"
rand = "0.8.5"
local-ip-address = "0.4.9"
lazy_static = "1.4.0"
rodio = "0.16.0"
png = "0.17.7"
cgmath = "0.18.0"
